Сценарий обновления имени облачного файла пользователя
