# webapp/src/main/java/ru/netology/cloudstorage/webapp/controller/AppFileController.java
@@ -8,9 +8,7 @@ import org.springframework.http.MediaType;
 import org.springframework.security.access.annotation.Secured;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import ru.netology.cloudstorage.contracts.auth.model.PermissionFiles;
 import ru.netology.cloudstorage.contracts.core.boundary.create.CreateCloudFileInput;
 import ru.netology.cloudstorage.contracts.core.boundary.create.CreateCloudFileInputRequest;
@@ -18,12 +16,14 @@ import ru.netology.cloudstorage.contracts.core.boundary.create.CreateCloudFileIn
 import ru.netology.cloudstorage.contracts.core.boundary.list.ListCloudFileInput;
 import ru.netology.cloudstorage.contracts.core.boundary.list.ListCloudFileInputRequest;
 import ru.netology.cloudstorage.contracts.core.boundary.list.ListCloudFileInputResponse;
+import ru.netology.cloudstorage.contracts.core.boundary.update.UpdateCloudFileInput;
+import ru.netology.cloudstorage.contracts.core.boundary.update.UpdateCloudFileInputRequest;
+import ru.netology.cloudstorage.contracts.core.boundary.update.UpdateCloudFileInputResponse;
 import ru.netology.cloudstorage.contracts.core.model.CloudUser;
 import ru.netology.cloudstorage.contracts.core.model.TraceId;
 import ru.netology.cloudstorage.core.boundary.list.CoreListCloudFileInputRequest;
-import ru.netology.cloudstorage.webapp.boundary.AppCreateCloudFileResource;
-import ru.netology.cloudstorage.webapp.boundary.AppCreateFileInputRequest;
-import ru.netology.cloudstorage.webapp.boundary.AppListCloudFileInputResponse;
+import ru.netology.cloudstorage.core.boundary.update.CoreUpdateCloudFileInputRequest;
+import ru.netology.cloudstorage.webapp.boundary.*;
 import ru.netology.cloudstorage.webapp.factory.AppListCloudFileInputResponsePresenter;
 
 import java.util.List;
@@ -49,6 +49,8 @@ public class AppFileController {
     private final ListCloudFileInput listCloudFileInteractor;
     private final AppListCloudFileInputResponsePresenter listCloudFileInputResponsePresenter;
 
+    private final UpdateCloudFileInput updateCloudFileInteractor;
+
     @PostMapping(value = "/file", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
     @Secured(PermissionFiles.CREATE)
     public CreateCloudFileInputResponse createCloudFile(@Validated AppCreateCloudFileResource userFile,
@@ -64,5 +66,23 @@ public class AppFileController {
         ListCloudFileInputRequest request = new CoreListCloudFileInputRequest(user, limit, requestTraceId);
         ListCloudFileInputResponse response = listCloudFileInteractor.find(request);
         return listCloudFileInputResponsePresenter.format(response);
+    }
+
+    @PutMapping("/file")
+    @Secured(PermissionFiles.UPDATE)
+    public AppUpdateCloudFileInputResponse updateFile(
+            @RequestParam(name = "filename") String fileName,
+            @Validated @RequestBody AppUpdateCloudFileInputRequest apiRequest,
+            @AuthenticationPrincipal CloudUser user) {
+
+        UpdateCloudFileInputRequest request = CoreUpdateCloudFileInputRequest.builder()
+                .fileName(fileName)
+                .newFileName(apiRequest.getNewFileName())
+                .traceId(requestTraceId)
+                .user(user).build();
+
+        UpdateCloudFileInputResponse response = updateCloudFileInteractor.update(request);
+
+        return new AppUpdateCloudFileInputResponse(response);
     }
 }
